<resources>
    <string name="app_name">E-Rail</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="enrollno">Enrollment No.</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Click here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="log_in">LOG IN</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="long_shortcut">Search Train</string>
    <string name="short_shortcut">Search Train</string>
    <string name="disable_messege">Disabled</string>

    <string name="delete_dialog">Are You sure \nYou want to delete this food?</string>

    <string-array name="food_category">
        <item>Pizza</item>
        <item>Burger</item>
        <item>Gujarati Dish</item>
        <item>Punjabi Dish</item>
        <item>Cold Drinks</item>
        <item>Other</item>
    </string-array>

    <string-array name="station">
        <item>Ahmedabad Junction</item>
        <item>Maninagar</item>
        <item>Vatva</item>
        <item>Geratpur</item>
        <item>Barejadi Nandej</item>
        <item>Kanij</item>
        <item>Nenpur</item>
        <item>Mahemdavad Kheda Road</item>
        <item>Gothaj</item>
        <item>Nadiad Junction</item>
        <item>Utarsanda</item>
        <item>Kanjari Boriyavi Junction</item>
        <item>Anand Junction</item>
        <item>Vadod</item>
        <item>Adas Road</item>
        <item>Vasad Junction</item>
        <item>Nandesari</item>
        <item>Ranoli</item>
        <item>Bajva</item>
        <item>Vadodara Junction</item>
        <item>Vishvamitri</item>
        <item>Makarpura</item>
        <item>Varnama</item>
        <item>Itola</item>
        <item>Kashipura Sarar</item>
        <item>Miyagam Karjan Junction</item>
        <item>Lakodra Dethan</item>
        <item>Palej</item>
        <item>Varediya</item>
        <item>Nabipur</item>
        <item>Chavaj</item>
        <item>Bharuch Junction</item>
        <item>Ankleshwar Junction</item>
        <item>Panoli</item>
        <item>Hathuran</item>
        <item>Kosamba Junction</item>
        <item>Kim</item>
        <item>Kudsad</item>
        <item>Sayan</item>
        <item>Gothangam</item>
        <item>Kosad</item>
        <item>Utran</item>
        <item>Surat</item>
        <item>Udhana Junction</item>
        <item>Bhestan</item>
        <item>Sachin</item>
        <item>Maroli</item>
        <item>Navsari</item>
        <item>Gandhi Smriti</item>
        <item>Vedchha</item>
        <item>Ancheli</item>
        <item>Amalsad</item>
        <item>Billimora Junction</item>
        <item>Joravasan</item>
        <item>Dungri</item>
        <item>Valsad</item>
        <item>Atul</item>
        <item>Pardi</item>
        <item>Udvada</item>
        <item>Bagwada</item>
        <item>Vapi</item>
        <item>Karambeli</item>
        <item>Bhilad</item>
    </string-array>
</resources>
