<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/light_grey"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="15dp"
                android:textColor="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/light_grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="User" />

            <RadioButton
                android:id="@+id/radio_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Student" />


            <RadioButton
                android:id="@+id/radio_coolie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Coolie" />

            <RadioButton
                android:id="@+id/radio_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Shop" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="Log In"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="Skip>>"
            android:textColor="@color/grey"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>