<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signUp"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_account_circle_200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/light_grey"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background_left"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="FirstName"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/light_grey"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background_right"
                    android:gravity="center_vertical"
                    android:hint="LastName"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/grey"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAddressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Address"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/grey"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/light_grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:padding="15dp"
            android:text="@string/signUp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/already_user"
            android:textColor="@color/grey"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>